--- a/catalog.html
+++ b/catalog.html
@@ -1,151 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн спорт амортизаторын"
-    />
-    <meta name="author" content="2PICA" />
 
-    <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description"
+    content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн спорт амортизаторын" />
+  <meta name="author" content="2PICA" />
 
-    <!-- Bootstrap core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <!-- Custom fonts for this template -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <link
-      href="vendor/fontawesome/css/all.min.css"
-      rel="stylesheet"
-      media="print"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Varela+Round"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="preload"
-      href="vendor/fontawesome/webfonts/fa-solid-900.woff2"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="vendor/fontawesome/webfonts/fa-light-300.woff2"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet" />
-  </head>
+  <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
 
-  <body>
-    <nav>
-      <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a
-          class="nav-item nav-link active"
-          id="nav-home-tab"
-          data-toggle="tab"
-          href="#nav-home"
-          role="tab"
-          aria-controls="nav-home"
-          aria-selected="true"
-        ></a>
-      </div>
-    </nav>
-    <div class="tab-content" id="nav-tabContent">
-      <div
-        class="tab-pane fade show active"
-        id="nav-home"
-        role="tabpanel"
-        aria-labelledby="nav-home-tab"
-      >
-        test
-      </div>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <!-- Custom fonts for this template -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" media="print" />
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet" />
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous" />
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-light-300.woff2" as="font" crossorigin="anonymous" />
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
+        aria-controls="nav-home" aria-selected="true"></a>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      function template(args) {
-        fetch("./tesla.html")
-          .then(response => {
-            return response.text();
-          })
-          .then(data => {
-            document.getElementById(args).innerHTML = data;
-          });
-      }
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      test
+    </div>
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script>
+    // function template(args) {
+    //   fetch("./tesla.html")
+    //     .then(response => {
+    //       return response.text();
+    //     })
+    //     .then(data => {
+    //       document.getElementById(args).innerHTML = data;
+    //     });
+    // }
 
-      var ourRequest = new XMLHttpRequest();
-      ourRequest.open("GET", "http://localhost:5500/amadaxtreme/product.json");
-      ourRequest.onload = function() {
-        if (ourRequest.status >= 200 && ourRequest.status < 400) {
-          var ourData = JSON.parse(ourRequest.responseText);
-          renderHTML(ourData);
-        } else {
-          console.log("We connected to the server, but it returned an error.");
-        }
-      };
-      ourRequest.onerror = function() {
-        console.log("Connection error");
-      };
-      ourRequest.send();
-      function renderHTML(data) {
-        let carsName = Object.keys(data[0]);
-        let tabsName = [];
-        let tabContent = [];
-        for (i = 0; i < carsName.length; i++) {
-          let car = carsName[i];
-          let content = data[0][car];
-          template(`nav-${car}`);
-          if (i === 0) {
-            tabsName += `<a class="nav-item nav-link active" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
-            tabContent += `<div class="tab-pane fade active show" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab">${content.image}</div>`;
-          } else {
-            tabsName += `<a class="nav-item nav-link" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
-            tabContent += `<div class="tab-pane fade" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab">${content.image}</div>`;
-          }
-        }
-        document.getElementById("nav-tab").innerHTML = tabsName;
-        document.getElementById("nav-tabContent").innerHTML = tabContent;
+    var ourRequest = new XMLHttpRequest();
+    ourRequest.open("GET", "http://localhost:5500/amadaxtreme/product.json");
+    ourRequest.onload = function () {
+      if (ourRequest.status >= 200 && ourRequest.status < 400) {
+        var ourData = JSON.parse(ourRequest.responseText);
+        renderHTML(ourData);
+      } else {
+        console.log("We connected to the server, but it returned an error.");
       }
-    </script>
-  </body>
+    };
+    ourRequest.onerror = function () {
+      console.log("Connection error");
+    };
+    ourRequest.send();
+    function renderHTML(data) {
+      let carsName = Object.keys(data[0]);
+      let tabsName = [];
+      let tabContent = [];
+      for (i = 0; i < carsName.length; i++) {
+        let car = carsName[i];
+        let content = data[0][car];
+        // template(`nav-${car}`);
+        if (i === 0) {
+          tabsName += `<a class="nav-item nav-link active" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
+          tabContent += `<div class="tab-pane fade active show" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab"></div>`;
+        } else {
+          tabsName += `<a class="nav-item nav-link" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
+          tabContent += `<div class="tab-pane fade" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab"></div>`;
+        }
+      }
+      document.getElementById("nav-tab").innerHTML = tabsName;
+      document.getElementById("nav-tabContent").innerHTML = tabContent;
+    }
+  </script>
+</body>
+
 </html>
