--- a/mustache.html
+++ b/mustache.html
@@ -1,56 +1,54 @@
-<script id="mustacheTempalte_a" type="text/template">
-  <div class="item">
-      <h1>Upcoming Shows</h1>
-      {{#shows}}
-          <ul>
-              <li><strong>Title:</strong> {{title}}</li>
-              <li><strong>Description:</strong> {{{description}}}</li>
-              <li><strong>Video:</strong> {{video}}</li>
-              <li><strong>Category:</strong> {{category}}</li>
-          </ul>
-      {{/shows}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description"
+    content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн спорт амортизаторын" />
+  <meta name="author" content="2PICA" />
+
+  <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <!-- Custom fonts for this template -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" media="print" />
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet" />
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous" />
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-light-300.woff2" as="font" crossorigin="anonymous" />
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.min.css" rel="stylesheet" />
+</head>
+
+<body onload="renderHello()">
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
   </div>
-</script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/mustache@latest"></script>
+  <script src="render.js"></script>
+</body>
 
-<script id="mustacheTempalte_b" type="text/template">
-  <div class="item">
-      <h1>Upcoming Shows</h1>
-      {{#shows}}
-          <ul>
-              <li><strong>Title:</strong> {{title}}</li>
-              <li><strong>Description:</strong> {{{description}}}</li>
-              <li><strong>Video:</strong> {{video}}</li>
-              <li><strong>Category:</strong> {{category}}</li>
-          </ul>
-      {{/shows}}
-  </div>
-</script>
-
-<div class="target-output" data-template-chosen="a"></div>
-
-<script>
-  var targetContainer = $(".target-output"),
-    templateDefined = $(".target-output").data("template-chosen"),
-    template = $("#mustacheTempalte_" + templateDefined).html();
-
-  var shows = {
-    shows: [
-      {
-        category: "children",
-        description: "<a href='#'>A show</a> about a cake",
-        title: "Strawberry Shortcake",
-        video: "none"
-      },
-      {
-        category: "children",
-        description: "A show about a ice",
-        title: "Vanilla Ice",
-        video: "none"
-      }
-    ]
-  };
-
-  var html = Mustache.to_html(template, shows);
-
-  $(targetContainer).html(html);
-</script>
+</html>
